--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,6 @@
     <groupId>com.liulang.cloud</groupId>
     <artifactId>liulang-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <packaging>pom</packaging>
 
 </project>
